write simple front code

--- a/app/views/users/sign_in.html.erb
+++ b/app/views/users/sign_in.html.erb
@@ -1,1 +1,17 @@
+<h1>ClassLion</h1>
+<p> 10개의 학교, 150000명,
+  <br/>116053개의 강의평가
+</p>
+<br>
+
 <h1>로그인</h1>
+<form action="" method="">
+    <input type="text" placeholder="이메일">
+    <br/>
+    <input type="password" placeholder="비밀번호">
+    <br/>
+    <input type="submit" value="시작하기">
+</form>
+    <br/>
+    <p><a href="#">Forgot your password?</a></p>
+    Don’t have an account? <a href="/users/sign_up">SIGN UP</a>
