--- a/app/views/users/sign_up.html.erb
+++ b/app/views/users/sign_up.html.erb
@@ -1,1 +1,25 @@
+<h1>ClassLion</h1>
+<p> 10개의 학교, 150000명,
+  <br/>116053개의 강의평가
+</p>
+<br>
+
 <h1>회원가입</h1>
+<form action="" method="">
+    <input type="text" placeholder="이메일">
+    <br/>
+    <input type="password" placeholder="비밀번호">
+    <br/>
+    <input type="password" placeholder="비밀번호 확인">
+    <br/>
+
+    <input type="text" placeholder="학교">
+    <br/>
+    <input type="text" placeholder="전공">
+    <br/>
+
+    <input type="submit" value="가입하기">
+</form>
+    <br/>
+    <p>계속 진행하시면 <a href="#">개인정보 취급방침</a> 및 <a href="#">약관</a>에 동의하게됩니다</p>
+    Already have an account? <a href="/users/sign_in">SIGN IN</a>
