edit simple front code

--- a/app/views/users/sign_in.html.erb
+++ b/app/views/users/sign_in.html.erb
@@ -6,7 +6,7 @@
 
 <h1>로그인</h1>
 <form action="" method="">
-    <input type="text" placeholder="이메일">
+    <input type="email" placeholder="이메일">
     <br/>
     <input type="password" placeholder="비밀번호">
     <br/>
