--- a/app/views/users/sign_up.html.erb
+++ b/app/views/users/sign_up.html.erb
@@ -6,11 +6,11 @@
 
 <h1>회원가입</h1>
 <form action="" method="">
-    <input type="text" placeholder="이메일">
+    <input type="email" placeholder="이메일">
     <br/>
-    <input type="password" placeholder="비밀번호">
+    <input type="password" placeholder="비밀번호(8자 이상)">
     <br/>
-    <input type="password" placeholder="비밀번호 확인">
+    <input type="password" placeholder="비밀번호 확인(8자 이상)">
     <br/>
 
     <input type="text" placeholder="학교">
