--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,9 @@
-<h1>ClassLion</h1>
-<p> 10개의 학교, 150000명,
-  <br/>116053개의 강의평가
-</p>
+<%= render 'main_top'%>
+<%= render 'about'%>
+<%= render 'main_bottom'%>
 
-<a href="/users/sign_in">시작하기</a>
-<br/>
-<a href="/users/sign_up">가입하기</a>
-<br/>
-<a href="/home/about">클래스라이언 알아보기!</a>
+
+
+
+
+
