now we can use 'sign up'

--- a/app/views/users/sign_in.html.erb
+++ b/app/views/users/sign_in.html.erb
@@ -13,4 +13,4 @@
 </form>
     <br/>
     <p><a href="#">Forgot your password?</a></p>
-    Don’t have an account? <a href="/users/sign_up">SIGN UP</a>
+    회원이 아니신가요? <a href="/users/sign_up">가입하기!</a>
