--- a/app/views/users/sign_up.erb
+++ b/app/views/users/sign_up.erb
@@ -1,15 +1,13 @@
 <h1>회원가입</h1>
-<!-- 레일즈 helper 버전으로 작성하기 -->
-
 <%= form_for(@user, url: {action: "create"}, html: {method: "post"}) do |f| %>
 
     <%= f.email_field :email, autofocus: true, placeholder: "이메일" %><br/>
 
-    <%= f.password_field :password, autocomplete: "off", placeholder: "비밀번호(8자 이상)" %><br/>
+    <%= f.password_field :password, autocomplete: "off", placeholder: "비밀번호(8자 이상)"%><br/>
 
-    <%= f.password_field :password_confirm, autocomplete: "off", placeholder: "비밀번호 확인(8자 이상)" %><br/>
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "비밀번호 확인(8자 이상)"%><br/>
 
-    <%= f.text_field :nickname, autofocus: true, placeholder: "닉네임" %><br/>
+    <%= f.text_field :nickname, autofocus: true, placeholder: "닉네임"%><br/>
 
     <%= f.select(:is_boy) do %>
         <% [['여자', "false"], ['남자', "true"]].each do |s| %>
@@ -17,9 +15,9 @@
         <% end %>
     <% end %><br/>
 
-    <!--자동완성 기능 구현할 부분 -->
-    <%= f.text_field :university, autofocus: true, placeholder: "학교" %><br/>
-    <%= f.text_field :major, autofocus: true, placeholder: "전공" %><br/>
+    <%#자동완성 기능 구현할 부분, 나중엔 사용자가 직접쓰고, 하단에 학교가 떠서 선택할 수 있는 식(cf.에브리타임)%>
+    <%= f.collection_select(:university, University.all, :id, :local_name )%><br/>
+    <%= f.collection_select(:major, Major.all, :id, :name)%>
 
     <%= f.submit "가입하기" %>
 <% end %>
