--- a/app/views/users/sign_up.erb
+++ b/app/views/users/sign_up.erb
@@ -1,4 +1,5 @@
 <h1>회원가입</h1>
+<%= @errors %>
 <%= form_for(@user, url: {action: "create"}, html: {method: "post"}) do |f| %>
 
     <%= f.email_field :email, autofocus: true, placeholder: "이메일" %><br/>
