change User's signup&logi code to ROR style

--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -1,5 +1,5 @@
 <div id="about">
-  <p style="text-align:right"><a href="/users/sign_in">로그인</a> <a href="/users/sign_up">가입</a><br></p>
+  <p style="text-align:right"><%= link_to "로그인", login_path %><%= link_to "가입하기", signup_path %><br></p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
