--- a/app/views/home/_main_bottom.erb
+++ b/app/views/home/_main_bottom.erb
@@ -5,7 +5,7 @@
   <br/>116053개의 강의평가
 </p>
 
-<a href="/users/sign_in">시작하기</a><br>
-<a href="/users/sign_up">가입하기</a><br>
+<%= link_to "시작하기", login_path %>
+<%= link_to "가입하기", signup_path %>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
