--- a/app/views/home/_main_top.html.erb
+++ b/app/views/home/_main_top.html.erb
@@ -5,8 +5,8 @@
   <br/>116053개의 강의평가
 </p>
 
-<a href="/users/sign_in">시작하기</a><br>
-<a href="/users/sign_up">가입하기</a><br>
+<%= link_to "시작하기", login_path %><br>
+<%= link_to "가입하기", signup_path %><br>
 
 <a href="#about">클래스라이언 알아보기!</a>
 
