--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>회원가입</h1>
-<%= @errors %>
-<%= form_for(@user, url: {action: "create"}, html: {method: "post"}) do |f| %>
+<%= form_for(@user, url: signup_path) do |f| %>
+    <%= render 'shared/error_messages' %>
 
     <%= f.email_field :email, autofocus: true, placeholder: "이메일" %><br/>
 
@@ -17,10 +17,10 @@
     <% end %><br/>
 
     <%#자동완성 기능 구현할 부분, 나중엔 사용자가 직접쓰고, 하단에 학교가 떠서 선택할 수 있는 식(cf.에브리타임)%>
-    <%= f.collection_select(:university, University.all, :id, :local_name )%><br/>
-    <%= f.collection_select(:major, Major.all, :id, :name)%>
+    <%= f.collection_select(:university_id, University.all, :id, :local_name )%><br/>
+    <%= f.collection_select(:major_id, Major.all, :id, :name)%>
 
     <%= f.submit "가입하기" %>
 <% end %>
-<p>이미 회원이신가요? <a href="/users/sign_in"><u>로그인</u></a></p>
+<p>이미 회원이신가요? <%= link_to "로그인", login_path %></p>
 <p>계속 진행하시면 <a href="#">개인정보 취급방침</a> 및 <a href="#">약관</a>에 동의하게됩니다</p>
