--- a/app/views/home/_main_top.html.erb
+++ b/app/views/home/_main_top.html.erb
@@ -5,7 +5,7 @@
   <br/>116053개의 강의평가
 </p>
 
-<%= link_to "시작하기", login_path %><br>
+<%= link_to "로그인", login_path %><br>
 <%= link_to "가입하기", signup_path %><br>
 
 <a href="#about">클래스라이언 알아보기!</a>
