--- a/app/views/home/_main_middle.html.erb
+++ b/app/views/home/_main_middle.html.erb
@@ -1,4 +1,4 @@
-<div id="about">
+<div id="_main_middle">
   <p style="text-align:right"><%= link_to "로그인", login_path %><%= link_to "가입하기", signup_path %><br></p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
