--- a/app/views/evaluations/new.erb
+++ b/app/views/evaluations/new.erb
@@ -1,2 +1,31 @@
-<!--강의평가 작성 페이지-->
 강평하는페이지입니다
+<form>
+  <input name="region" placeholder="강의명" />
+</form>
+
+<h1>회원가입</h1>
+<%= form_for(@user, url: signup_path) do |f| %>
+    <%= render 'shared/error_messages' %>
+
+    <%= f.email_field :email, autofocus: true, placeholder: "이메일" %><br/>
+
+    <%= f.password_field :password, autocomplete: "off", placeholder: "비밀번호(8자 이상)"%><br/>
+
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "비밀번호 확인(8자 이상)"%><br/>
+
+    <%= f.text_field :nickname, autofocus: true, placeholder: "닉네임"%><br/>
+
+    <%= f.select(:is_boy) do %>
+        <% [['여자', "false"], ['남자', "true"]].each do |s| %>
+            <%=  content_tag(:option, s.first, value: s.last) %>
+        <% end %>
+    <% end %><br/>
+
+    <%#자동완성 기능 구현할 부분, 나중엔 사용자가 직접쓰고, 하단에 학교가 떠서 선택할 수 있는 식(cf.에브리타임)%>
+    <%= f.collection_select(:university_id, University.all, :id, :local_name )%><br/>
+    <%= f.collection_select(:major_id, Major.all, :id, :name)%>
+
+    <%= f.submit "가입하기" %>
+<% end %>
+<p>이미 회원이신가요? <%= link_to "로그인", login_path %></p>
+<p>계속 진행하시면 <a href="#">개인정보 취급방침</a> 및 <a href="#">약관</a>에 동의하게됩니다</p>
