--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -1,6 +1,29 @@
 <p>강평열람 <a href="#">ON</a></p>
 <p>위키열람 <a href="#">ON</a></p>
 <p>회원정보 편집</p>
-<p>내가 쓴 강의</p>
+<p>내가 쓴 강의평</p>
+<!-- 10개짤라서 -->
+
+<h1>강평 목록</h1>
+<table>
+  <tr>
+    <th>강의명</th>
+    <th>교수명</th>
+    <th>학교</th>
+    <th>평점</th>
+    <th>내용</th>
+  </tr>
+
+  <% @evaluations.each do |e| %>
+      <tr>
+        <td><%= e.course.lecture.name %></td>
+        <td><%= e.course.professor.name %></td>
+        <td><%= e.course.university.local_name %></td>
+        <td><%= e.point_overall %></td>
+        <td><%= e.body.html_safe %></td>
+      </tr>
+  <% end %>
+</table>
+
 <p>내가 쓴 댓글</p>
 <p>관심강의</p>
