--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
 
   <header>
     <!--로그인 x-->
-    <a href="/evaluations/index">CLASSLION(로고)</a> <input placeholder="강의명, 교수명, 전공명으로 검색해보세요!" type="text" name="courses" size="120">
+    <a href="/evaluations/index">CLASSLION</a> <input placeholder="강의명, 교수명, 전공명으로 검색해보세요!" type="text" name="courses" size="120">
 
     <% if logged_in? %>
         1000P
         강평열람
-        위키열람
+        <%= button_to 'Call Action', roles_evaluator_path, method: :post %>
+        <위키열람></위키열람>
+        <%= button_to 'Call Action', roles_wikier_path, method: :post %>
         <%= current_user.nickname %>
         <a href="/mypages/index">마이페이지</a>
         <%= link_to "로그아웃", logout_path, method: :delete %>
