--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -1,6 +1,4 @@
-<p>강평열람 <a href="#">ON</a></p>
-<p>위키열람 <a href="#">ON</a></p>
-<p>회원정보 편집</p>
+<a href="#"><p>회원정보 편집</p></a>
 <p>내가 쓴 강의평</p>
 <!-- 10개짤라서 -->
 
