--- a/app/views/evaluations/new.erb
+++ b/app/views/evaluations/new.erb
@@ -1,31 +1,19 @@
-강평하는페이지입니다
-<form>
-  <input name="region" placeholder="강의명" />
-</form>
+<!--user_id: current_user.id,-->
+<!--course_id: params[:course_id],-->
+<!--point_overall: params[:point_overall],-->
+<!--# point_easiness: params[:point_easiness],-->
+<!--# point_gpa_satisfaction: params[:point_gpa_satisfaction],-->
+<!--# point_clarity: params[:point_clarity],-->
+<!--body: body[:body]-->
 
-<h1>회원가입</h1>
-<%= form_for(@user, url: signup_path) do |f| %>
-    <%= render 'shared/error_messages' %>
+<h1>강평작성</h1>
+<%= form_for(@evaluations) do |f| %>
+    <%= f.search_field :course_id, autocomplete: "on", placeholder: "수업아이디"%><br/>
 
-    <%= f.email_field :email, autofocus: true, placeholder: "이메일" %><br/>
+    <%= f.password_field :point_overall, autocomplete: "on", placeholder: "점수"%><br/>
 
-    <%= f.password_field :password, autocomplete: "off", placeholder: "비밀번호(8자 이상)"%><br/>
+    <%= f.text_field :body, autofocus: true, placeholder: "한줄평"%><br/>
 
-    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "비밀번호 확인(8자 이상)"%><br/>
+    <%= f.submit "작성하기" %>
 
-    <%= f.text_field :nickname, autofocus: true, placeholder: "닉네임"%><br/>
-
-    <%= f.select(:is_boy) do %>
-        <% [['여자', "false"], ['남자', "true"]].each do |s| %>
-            <%=  content_tag(:option, s.first, value: s.last) %>
-        <% end %>
-    <% end %><br/>
-
-    <%#자동완성 기능 구현할 부분, 나중엔 사용자가 직접쓰고, 하단에 학교가 떠서 선택할 수 있는 식(cf.에브리타임)%>
-    <%= f.collection_select(:university_id, University.all, :id, :local_name )%><br/>
-    <%= f.collection_select(:major_id, Major.all, :id, :name)%>
-
-    <%= f.submit "가입하기" %>
 <% end %>
-<p>이미 회원이신가요? <%= link_to "로그인", login_path %></p>
-<p>계속 진행하시면 <a href="#">개인정보 취급방침</a> 및 <a href="#">약관</a>에 동의하게됩니다</p>
