--- a/app/views/home/_main_bottom.html.erb
+++ b/app/views/home/_main_bottom.html.erb
@@ -1,11 +1,21 @@
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="main_container">
+  <div class="container">
+    <div class="set_full col-lg-4 col-md-4 visible-lg-block visible-md-block"></div>
+    <div class="set_full col-lg-4 col-md-4 col-sm-12 col-xs-12 center_box">
+      <div class="outer">
+        <div class="inner">
+          <div class="centered">
+            <p class="logo">CLASSLION</p>
+            <p class="main_msg">이제, 시작해보세요!</p>
 
-<h1>ClassLion</h1>
-<p> 10개의 학교, 150000명,
-  <br/>116053개의 강의평가
-</p>
+            <a href="<%= login_path %>"><button type="button" class="login_btn">로그인</button></a><br>
+            <a href="<%= signup_path %>"><button type="button" class="join_btn">회원가입</button></a>
 
-<%= link_to "로그인", login_path %>
-<%= link_to "가입하기", signup_path %>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <a href="#" class="go_about">클래스라이언 알아보기!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="set_full col-lg-4 col-md-4 visible-lg-block visible-md-block"></div>
+  </div>
+</div>
