--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
         <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
 
+    <% unless current_user.nil? %><%# 로그인을 해야 상단 네비가 보여짐 %>
     <header>
       <!--로그인 x-->
       <a href="/evaluations/index">CLASSLION</a> <input placeholder="강의명, 교수명, 전공명으로 검색해보세요!" type="text" name="courses" size="80">
@@ -50,13 +51,15 @@
           <%= link_to "로그인", login_path %>
       <% end %>
     </header>
+    <% end %>
 
     <%= yield %>
 
+    <% unless current_user.nil? %>
     <footer>
       <a href="#">ClassLion</a>
       <%= button_to '권한삭제', roles_remove_path, method: :post %>
     </footer>
-
+    <% end %>
   </body>
 </html>
