--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <% unless current_user.nil? %>
     <header>
       <!--로그인 x-->
-      <a href="/evaluations/index">CLASSLION</a> <input placeholder="강의명, 교수명, 전공명으로 검색해보세요!" type="text" name="courses" size="80">
+      <a href="/evaluations">CLASSLION</a> <input placeholder="강의명, 교수명, 전공명으로 검색해보세요!" type="text" name="courses" size="80">
       <% if logged_in? %>
           <%= current_user.point %> 점
           <div class="rolebutton">
