--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 ul.ui-autocomplete {
   position: absolute;;
   list-style: none;
@@ -33,4 +34,8 @@ ul.ui-autocomplete {
 
 .green {
   color: #27b5af;
+}
+
+.orange {
+  color: #fc642d;
 }
