--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -39,3 +39,8 @@ ul.ui-autocomplete {
 .orange {
   color: #fc642d;
 }
+
+//input에 포커스가 왔을 때
+.focus {
+  background-color: rgba(255, 255, 255, 0.1);
+}
