--- a/app/views/evaluations/new.erb
+++ b/app/views/evaluations/new.erb
@@ -1,6 +1,6 @@
 <h1>강평작성</h1>
 <%= form_for @evaluation do |f| %>
-    <% f.hidden_field :user_id, value: current_user.id %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
 
     <%= f.number_field :course_id, autocomplete: "on", placeholder: "수업아이디"%><br/>
 
